kodex-rs/tui/src/bottom_pane/snapshots/kodex_tui__bottom_pane__approval_overlay__tests__approval_overlay_patch_destination_unavailable.snap
---
source: tui/src/bottom_pane/approval_overlay.rs
expression: "normalize_snapshot_paths(render_overlay_lines(&view, 120))"
---

  Would you like to make the following edits?

  Description: Apply proposed file edits
  Destination: unavailable


› 1. Yes, proceed (y)
  2. Yes, and don't ask again for these files (a)
  3. No, and tell Kodex what to do differently (esc)

  Press enter to confirm or esc to cancel
